--- a/DRHSWC_API/src/main/resources/application.properties
+++ b/DRHSWC_API/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.org.springframework = info
 server.port = 8080
 
-datasource.url=jdbc:mysql://localhost:3306/drhswritingcenter
+datasource.url=jdbc:mysql://localhost:3306/drhswc
 datasource.username=root
 datasource.password=password
 datasource.driver.class=com.mysql.jdbc.Driver
