--- a/DRHSWC_API/src/main/resources/application.properties
+++ b/DRHSWC_API/src/main/resources/application.properties
@@ -3,5 +3,7 @@ server.port = 8080
 
 datasource.url=jdbc:mysql://localhost:3306/drhswc
 datasource.username=root
-datasource.password=password
+datasource.password=
 datasource.driver.class=com.mysql.jdbc.Driver
+
+server.servlet.context-path=/api
