--- a/DRHSWS_UI/angular.json
+++ b/DRHSWS_UI/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/dist/scss/bootstrap.min.scss",
               "src/styles.scss"
             ],
             "scripts": [],
