--- a/DRHSWS_UI/angular.json
+++ b/DRHSWS_UI/angular.json
@@ -30,7 +30,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": ["../node_modules/jquery/dist/jquery.min.js",
+              "../node_modules/bootstrap/dist/js/bootstrap.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
