--- a/DRHSWS_UI/package.json
+++ b/DRHSWS_UI/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "jquery": "^3.4.0",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tether": "^1.4.6",
     "tslib": "^1.9.0",
