Added email functionality

--- a/DRHSWC_API/src/main/resources/application.properties
+++ b/DRHSWC_API/src/main/resources/application.properties
@@ -1,9 +1,22 @@
 logging.level.org.springframework = info
 server.port = 8080
 
+#database configuration
 datasource.url=jdbc:mysql://localhost:3306/drhswc
 datasource.username=root
 datasource.password=password
 datasource.driver.class=com.mysql.jdbc.Driver
 
+#context path for Api calls
 server.servlet.context-path=/api
+
+#email properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vagaram@gmail.com	
+spring.mail.password=onkbggpdrfvipcgs
+spring.mail.protocol=smtp
+spring.mail.test.connection=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+props.put("mail.smtp.ssl.trust", "smtp.gmail.com");
