--- a/DRHSWC_API/pom.xml
+++ b/DRHSWC_API/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+   			 <groupId>org.springframework.boot</groupId>
+   			 <artifactId>spring-boot-starter-mail</artifactId>
+   			 <version>2.0.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
