--- a/DRHSWC_API/src/main/resources/application.properties
+++ b/DRHSWC_API/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #logging.level.org.springframework = info
 server.port = 8080
-
+#10.180.144.20
 #database configuration
+#datasource.url=jdbc:mysql://10.180.144.20:3306/drhswc
 datasource.url=jdbc:mysql://localhost:3306/drhswc
 datasource.username=root
 datasource.password=password
@@ -15,6 +16,8 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vagaram@gmail.com	
 spring.mail.password=onkbggpdrfvipcgs
+#spring.mail.username=drhswritingcenter@gmail.com	
+#spring.mail.password=onkbggpdrfvipcgs
 spring.mail.protocol=smtp
 spring.mail.test.connection=false
 spring.mail.properties.mail.smtp.auth=true
