--- a/DRHSWC_API/src/main/resources/application.properties
+++ b/DRHSWC_API/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port = 8080
 #10.180.144.20
 #database configuration
-#ec2-3-14-145-246.us-east-2.compute.amazonaws.com
-#datasource.url=jdbc:mysql://10.180.144.20:3306/drhswc
-datasource.url=jdbc:mysql://localhost:3306/drhswc
+#datasource.url=jdbc:mysql://localhost:3306/drhswc
+datasource.url=jdbc:mysql://10.180.144.20:3306/drhswc
+#datasource.url=jdbc:mysql://drhswcaws.c3udsp8zxjtq.us-east-2.rds.amazonaws.com:3306/drhswc
 datasource.username=root
 datasource.password=password
 datasource.driver.class=com.mysql.jdbc.Driver
